# gcc-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
rules/: BUILD.bazel  configure.bzl  dep_source.bzl  extensions.bzl  gcc_source.bzl  sysroot.bzl
rules/config/x86_64-linux-gnu/: BUILD.bazel
rules/config/x86_64-linux-gnu/gcc/: auto-host.h  configargs.h  plugin-version.h
rules/config/x86_64-linux-gnu/libbacktrace/: config.h
rules/config/x86_64-linux-gnu/libcpp/: config.h
rules/config/x86_64-linux-gnu/libdecnumber/: config.h  gstdint.h
rules/config/x86_64-linux-gnu/libgcc/: auto-target.h  config.h
rules/config/x86_64-linux-gnu/libiberty/: config.h
rules/config/x86_64-linux-gnu/libstdc++/: backtrace-supported.h  c++config.h  config.h
rules/gengtype-output/: gt-ada-decl.h  gt-ada-misc.h  gt-ada-trans.h  gt-ada-utils.h  gt-algol68-a68-lang.h  gt-algol68-a68-low-ranges.h  gt-alias.h  gt-analyzer-language.h  gt-asan.h  gt-attribs.h  gt-bitmap.h  gt-btfout.h  gt-c-c-decl.h  gt-c-c-parser.h  gt-c-family-c-common.h  gt-c-family-c-cppbuiltin.h  gt-c-family-c-format.h  gt-c-family-c-pragma.h  gt-caller-save.h  gt-cfgrtl.h  gt-cgraph.h  gt-cgraphclones.h  gt-cobol-cobol1.h  gt-coverage.h  gt-cp-call.h  gt-cp-class.h  gt-cp-constexpr.h  gt-cp-constraint.h  gt-cp-contracts.h  gt-cp-coroutines.h  gt-cp-cp-gimplify.h  gt-cp-cp-lang.h  gt-cp-cp-objcp-common.h  gt-cp-decl.h  gt-cp-decl2.h  gt-cp-except.h  gt-cp-friend.h  gt-cp-init.h  gt-cp-lambda.h  gt-cp-lex.h  (+103 more)
rules/overlay/: gcc.BUILD  libbacktrace.BUILD  libcody.BUILD  libcpp.BUILD  libdecnumber.BUILD  libgcc.BUILD  libiberty.BUILD  libstdc++.BUILD  root.BUILD
scripts/: gen-gtype-headers.sh
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
