module(
    name = "gcc_build",
    version = "0.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_flex", version = "0.4")
bazel_dep(name = "rules_m4", version = "0.3")
bazel_dep(name = "gawk", version = "5.3.2.bcr.3")
bazel_dep(name = "sed", version = "4.9.bcr.3")
bazel_dep(name = "zlib", version = "1.3.2")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "rules_pkg", version = "1.0.1")

gcc_ext = use_extension("//rules:extensions.bzl", "gcc_ext")
use_repo(
    gcc_ext,
    "gcc",
    "gcc_config",
    "gmp",
    "mpc",
    "mpfr",
    "sysroot",
)
